# coursTSP

./: .gitignore  README.md
CSC3101/CI3/: build.gradle  settings.gradle
CSC3101/CI4/: build.gradle  settings.gradle
CSC3101/CI5/: build.gradle  settings.gradle
CSC3101/CI7/: build.gradle  settings.gradle
CSC3101/Revisions/: build.gradle  settings.gradle
CSC4103/DM/: CMakeLists.txt  memory_alloc.c
CSC4103/DM/cmocka/: cmocka.exp  cmocka.lib
CSC4103/TP1/: CMakeLists.txt  main.c
CSC4103/TP10/: CF1_2021.c  Makefile  client  server  server_code_etudiant.c
CSC4103/TP2/: CMakeLists.txt  main.c
CSC4103/TP4/: CMakeLists.txt  chained_list.c
CSC4103/TP5/: CMakeLists.txt  Exercice_1.c  Exercice_2.c
CSC4103/TP6/: CMakeLists.txt  tri_bubble.c  tri_tabs.c
CSC4103/TP7/: CMakeLists.txt  intro.c  main.c  mysh.c
CSC4103/TP8/: CMakeLists.txt  bank.c  memory.c  sem.c
CSC4103/TP9/: main
CSC4103/TP9/signaux/: main.c
CSC4103/TP9/tableAssiciation/: Makefile  map.c  map.h  map_tree.c
FiniteElements/: TP1.ipynb
France-IOI/: CMakeLists.txt  ChoisirSonManteau.cpp
MAT4102/: Rapport.docx
MAT4102/TP_2/: TP_Bagging_Boosting.ipynb  TP_DT_RF_digits.ipynb  TP_DT_RF_iris.ipynb
MAT4102/TP_Kmeans/: Kmeans.ipynb  TP1_apprentissage_non_supervisé.ipynb
MAT4102/TP_Kmeans/rapport/: main.aux  main.out  (+2 more)
MAT4103/: TP1_FARHAT_CHARLES.ipynb  opti_project_v5.ipynb
MAT4103/TP1/: des.csv
MAT4103/TP2/: TP2_GR2_FARHAT_CHARLES.ipynb  pop.sas7bdat  pop_paroisses.sas7bdat
MAT4201/: Notes_TP_filtrage.docx  function_pool_part_1.py  function_pool_part_2.py  globals.py  main.ipynb
(+48 files in other folders)
